tests/snapshots/regression/semantic_types__type_classes__missing_instance_error.snap
---
source: tests/integration/regression_snapshots.rs
assertion_line: 132
---
$ flux --no-cache tests/fixtures/semantic_types/type_classes/missing_instance_error.flx
exit_code: 1

[ 1 of 11] Compiling  Assert
[ 2 of 11] Compiling  Array
[ 3 of 11] Compiling  List
[ 4 of 11] Compiling  Either
[ 5 of 11] Compiling  IO
[ 6 of 11] Compiling  Math
[ 7 of 11] Compiling  Numeric
[ 8 of 11] Compiling  Option
[ 9 of 11] Compiling  Primops
[10 of 11] Compiling  String
• 1 error • tests/fixtures/semantic_types/type_classes/missing_instance_error.flx
error[E444]: No Type Class Instance

No instance for `Sizeable<String>`.

  tests/fixtures/semantic_types/type_classes/missing_instance_error.flx:10:5
   |
10 |     size("flux")
   |     ^^^^^^^^^^^^

Hint:
  Add an instance: `instance Sizeable<String> { ... }`
